<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivAppIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/icon_margin_top_portrait"/>

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/material_dark_800"
                android:textSize="30sp"
                android:layout_below="@id/ivAppIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvAbout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAppName"
                android:textColor="@color/aboutText"
                android:lineSpacingExtra="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/description1"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tvAbout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/aboutText"
                android:lineSpacingExtra="5dp"
                android:text="@string/description2"
                android:textSize="17sp"
                android:layout_below="@id/tvAbout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <RelativeLayout
                android:id="@+id/rlCoder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAbout2"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/tvCoder1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/aboutText"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/developer"
                    android:textSize="17sp" />
                <TextView
                    android:id="@+id/tvGooglePlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#25C6DA"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/google"
                    android:textSize="17sp"
                    android:layout_below="@id/tvCoder1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvGithub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlCoder"
                android:textColor="@color/aboutText"
                android:lineSpacingExtra="5dp"
                android:text="@string/github"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:padding="20dp"/>
        </RelativeLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_white_24dp"
        android:tint="@color/material_dark_800"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:padding="3dp"/>
</RelativeLayout>